<resources>
    <string name="app_name">WhitneyBB</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="objectives">Objectives</string>
    <string name="diary">Diary</string>
    <string name="summary">Summary</string>
    <string name="goals">Goals</string>
    <string name="alerts">Alerts</string>
    <string name="notes">Notes</string>
    <string name="calendar">Calendar</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="about_us">About Us</string>
    <string name="main_page">MainPage</string>

    <!-- Settings Strings -->

    <string name="sync_pref">Sync</string>
    <string name="sync_pref_summary">
        Manage All sections of the app in one place, this is your cockpit and you are the pilot
    </string>

    <string name="pref_syncConnectionType">Synch Connection Type</string>
    <string name="pref_syncConnectionType_dialog_title">Perform Sync Using</string>
    <string name="pref_synchConnectionType_defaulf_value">Wifi</string>

    <string-array name="pref_syncConnectionType_entries">
        <item>WiFi</item>
        <item>Mobile Data</item>
        <item>WiFi/Mobile Data</item>
    </string-array>

    <string-array name="pref_syncConnectionType_values">
        <item>WiFi</item>
        <item>Mobile</item>
        <item>WiFi_Mobile</item>
    </string-array>

    <!-- End of settings screen -->

    <string-array name="alert_options">
        <item>Remind me all day</item>
        <item>Set a one time alarm</item>
        <item>Set a repeated alarm</item>
        <item>Remind me after every ... from ...</item>
    </string-array>

</resources>