<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_summary"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/summary" />

        <item
            android:id="@+id/nav_objectives"
            android:icon="@drawable/ic_objective"
            android:title="@string/objectives" />

        <item
            android:id="@+id/nav_goals"
            android:icon="@drawable/ic_goal"
            android:title="@string/goals"/>

        <item
            android:id="@+id/nav_diary"
            android:icon="@drawable/ic_book"
            android:title="@string/diary" />

        <item
            android:id="@+id/nav_notes"
            android:icon="@drawable/ic_note"
            android:title="@string/notes"/>

        <item
            android:id="@+id/nav_alerts"
            android:icon="@drawable/ic_alarm_alert"
            android:title="@string/alerts"/>

        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_calendar_"
            android:title="@string/calendar"/>

        <item
            android:id="@+id/nav_aboutUs"
            android:icon="@drawable/ic_info_"
            android:title="@string/about_us"/>
    </group>
</menu>