<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_objectives">

    <fragment
        android:id="@+id/nav_objectives"
        android:name="com.example.whitneybb.ui.objectives.ObjectivesFragment"
        android:label="@string/objectives"
        tools:layout="@layout/fragment_objectives" />

    <fragment
        android:id="@+id/nav_diary"
        android:name="com.example.whitneybb.ui.diary.DiaryFragment"
        android:label="@string/diary"
        tools:layout="@layout/fragment_diary" />

    <fragment
        android:id="@+id/nav_summary"
        android:name="com.example.whitneybb.ui.summary.SummaryFragment"
        android:label="@string/summary"
        tools:layout="@layout/fragment_summary" />

    <fragment
        android:id="@+id/nav_goals"
        android:name="com.example.whitneybb.ui.goals.GoalsFragment"
        android:label="@string/goals"
        tools:layout="@layout/goals_fragment"/>

    <fragment
        android:id="@+id/nav_alerts"
        android:name="com.example.whitneybb.ui.alerts.AlertsFragment"
        tools:layout="@layout/alerts_fragment"
        android:label="@string/alerts" />

    <fragment
        android:id="@+id/nav_notes"
        android:name="com.example.whitneybb.ui.notes.NotesFragment"
        android:label="@string/notes"
        tools:layout="@layout/notes_fragment"/>

    <fragment
        android:id="@+id/nav_calendar"
        android:name="com.example.whitneybb.ui.calendar.CalendarFragment"
        android:label="@string/calendar"
        tools:layout="@layout/calendar_fragment"/>

    <fragment
        android:id="@+id/nav_aboutUs"
        android:name="com.example.whitneybb.ui.aboutUs.AboutUs"
        android:label="@string/about_us"
        tools:layout="@layout/about_us_fragment"/>

</navigation>